--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,15 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+# Ignore Pem keys
+*.pem
+
+# Commands to run on cli
+commands.txt
+
+# temp
+fullscript.sh
+
+# ignore ip address file
+my-ip.tf
